Fix for alignment of item net input on mobile

--- a/dev/sass/_includes/_elements.scss
+++ b/dev/sass/_includes/_elements.scss
@@ -17,9 +17,12 @@ main {
 section {
 	@include border-radius;
 	background-color: $second-bg-color;
-	padding: $base-padding;
+	padding: $base-padding / 2;
 	margin-top: $base-margin;
 	margin-bottom: $base-margin;
+	@media ($tablet-min) {
+		padding: $base-padding;
+	}
 }
 input, textarea, select {
 	@include border-radius;
